--- a/_data/people.yml
+++ b/_data/people.yml
@@ -110,7 +110,7 @@ sandhya:
 
 sumedh:
     display_name: "Sumedh Vemuganti"
-    netid: sumedh2-alum
+    netid: sumedh2
     webpage: "https://www.linkedin.com/in/sumedh-vemu/"
     github: sumedh2
     role: grad-alum
