--- a/_data/people.yml
+++ b/_data/people.yml
@@ -236,7 +236,7 @@ tuedo:
     webpage: "http://tuedo2.github.io/"
     github: tuedo2
     role: grad-alum
-    image: /img/people/tuedo.png\
+    image: /img/people/tuedo.png
     bio: Graduate Course Assistant
     OHs: 
     #   OH1:
