--- a/_data/people.yml
+++ b/_data/people.yml
@@ -340,7 +340,7 @@ brian:
 vishesh:
     display_name: "Vishesh Prasad"
     netid: vprasad3
-    webpage: ""
+    webpage: "https://visheshprasad.com/"
     github: VisheshP-29
     role: ugrad-alum
     image: /img/people/visheh.png
