--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ roles:
   #   name: Alumni
 
 # Number of news stories on the front page.
-front_page_news: 1
+front_page_news: 2
 
 # Base pathname for links.
 base: ''
@@ -75,5 +75,5 @@ navigation:
     link: /office_hours.html       
 
 #Variable that sets if this is a archived version of the site or not
-archived: true
+archived: false
 teachingthissem: false
