Fxing Atharv's TA role

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -288,7 +288,7 @@ atharva:
     netid: atharva7
     webpage: "http://www.linkedin.com/in/atharvajain/"
     github: jainatharva21
-    role: ugrad-alum
+    role: grad
     image: /img/people/atharva.jpg
     bio: Undergraduate Course Assistant
     OHs: 
