Fixing some bugs

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -870,7 +870,7 @@ shreyansh:
     bio: Undergraduate Course Assistant
 
 raymond:
-    display_name: "Raaymond Alvaro"
+    display_name: "Raymond Alvaro"
     netid: ralvaro2
     webpage: ""
     github: 
