--- a/_data/exam.yml
+++ b/_data/exam.yml
@@ -8,8 +8,8 @@ MT1:
   samp_exam2_sol: /materials/exams/samples/midterm1-sol-sp23.pdf
   skillset: materials/exams/mt_1_skillset.pdf
   cheat_sheet: materials/exams/main_MT1.pdf
-  exam_questions: materials/exams/midterm1-vf-fa23.pdf
-  exam_solutions: materials/exams/midterm1-vf-fa23-sol.pdf
+  exam_questions: #materials/exams/midterm1-vf-fa23.pdf
+  exam_solutions: #materials/exams/midterm1-vf-fa23-sol.pdf
 
 MT2: 
   num: 2
@@ -21,8 +21,8 @@ MT2:
   samp_exam2_sol: /materials/exams/samples/midterm2-sol-sp23.pdf
   skillset: materials/exams/mt_2_skillset.pdf
   cheat_sheet: materials/exams/main_MT2.pdf
-  exam_questions: materials/exams/midterm2-vf-fa23.pdf
-  exam_solutions: materials/exams/midterm2-vf-fa23-sol.pdf
+  exam_questions: #materials/exams/midterm2-vf-fa23.pdf
+  exam_solutions: #materials/exams/midterm2-vf-fa23-sol.pdf
 
 MT3: 
   num: 3
@@ -34,8 +34,8 @@ MT3:
   samp_exam2_sol: /materials/exams/samples/midterm3-sol-sp23.pdf
   skillset: materials/exams/mt_3_skillset.pdf
   cheat_sheet: materials/exams/main_MT3.pdf
-  exam_questions: materials/exams/midterm3-vf-fa23.pdf
-  exam_solutions: materials/exams/midterm3-vf-fa23-sol.pdf
+  exam_questions: #materials/exams/midterm3-vf-fa23.pdf
+  exam_solutions: #materials/exams/midterm3-vf-fa23-sol.pdf
 
 # Final: 
 #   num: 4
