adding ranjani to course staff

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -797,8 +797,8 @@ ajitesh:
     image: /img/people/anon-male.jpg
     bio: Undergraduate Course Assistant
 
-ritish:
-    display_name: "Ritish Dahivalkar"
+ranjani:
+    display_name: "Ranjani Ramesh"
     netid: rrd6
     webpage: ""
     github: 
