fixing Ranjani's netid

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -799,7 +799,7 @@ ajitesh:
 
 ranjani:
     display_name: "Ranjani Ramesh"
-    netid: rrd6
+    netid: rr37
     webpage: "https://www.linkedin.com/in/ranjani-ramesh/"
     github: ranjaniramesh99
     role: ugrad
