Added Wenhao's info

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -837,9 +837,9 @@ wenhao:
     display_name: "Wenhao Zhang"
     netid: wenhaoz5
     webpage: ""
-    github: 
+    github: WHZ2003
     role: ugrad
-    image: /img/people/anon-male.jpg
+    image: /img/people/wenhao.jpg
     bio: Undergraduate Course Assistant
 
 vidhata:
