Adding Ajitech info

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -791,10 +791,10 @@ kylechung:
 ajitesh:
     display_name: "Ajitesh Dasaratha"
     netid: asd11
-    webpage: ""
+    webpage: "https://www.linkedin.com/in/ajiteshdasaratha"
     github: 
     role: ugrad
-    image: /img/people/anon-male.jpg
+    image: /img/people/ajitesh.jpg
     bio: Undergraduate Course Assistant
 
 ranjani:
