--- a/_data/people.yml
+++ b/_data/people.yml
@@ -272,7 +272,7 @@ vishesh:
     display_name: "Vishesh Prasad"
     netid: vprasad3
     webpage: "https://visheshprasad.com/"
-    github: VisheshP-29
+    github: visheshprasad
     role: grad
     image: /img/people/visheh.png
     bio: Undergraduate Researcher
@@ -801,12 +801,12 @@ ajitesh:
         time-start: "12:00"
         time-end: "14:00"
         day: Monday
-        location: 
+        location: ECEB 4036
       OH2:
         time-start: "12:00"
         time-end: "14:00"
         day: Tuesday
-        location: 
+        location: ECEB 4034
 
 ranjani:
     display_name: "Ranjani Ramesh"
@@ -821,12 +821,12 @@ ranjani:
         time-start: "10:00"
         time-end: "11:00"
         day: Thursday
-        location: 
+        location: ECEB 2036
       OH2:
         time-start: "12:00"
         time-end: "14:00"
         day: Friday
-        location: 
+        location: ECEB 3001
 
 
 tristan:
@@ -838,11 +838,11 @@ tristan:
     image: /img/people/tristan.png
     bio: Undergraduate Course Assistant
     OHs: 
-    #   OH1:
-    #     time-start: "14:00"
-    #     time-end: "16:00"
-    #     day: Friday
-    #     location: 
+      OH1:
+        time-start: "16:00"
+        time-end: "18:00"
+        day: Friday
+        location: 
     #   OH2:
     #     time-start: "12:00"
     #     time-end: "14:00"
@@ -880,12 +880,12 @@ wenhao:
         time-start: "10:00"
         time-end: "11:00"
         day: Wednesday
-        location: 
+        location: ECEB 4034
       OH2:
         time-start: "10:00"
         time-end: "11:00"
         day: Friday
-        location: 
+        location: ECEB 3001
 
 
 vidhata:
@@ -921,7 +921,7 @@ anushree:
         time-start: "10:00"
         time-end: "11:00"
         day: Monday
-        location: 
+        location: ECEB 4034
     #   OH2:
     #     time-start: "12:00"
     #     time-end: "14:00"
@@ -941,7 +941,7 @@ shreyansh:
         time-start: "11:00"
         time-end: "12:00"
         day: Friday
-        location: 
+        location: ECEB 3001
     #   OH2:
     #     time-start: "12:00"
     #     time-end: "14:00"
