Adding hoemworks to course website

--- a/_config.yml
+++ b/_config.yml
@@ -67,6 +67,8 @@ navigation:
     link: /lectures.html    
   - title: Quizzes
     link: /quizzes.html
+  - title: Homeworks
+    link: /homeworks.html
   - title: Exams
     link: /exams.html    
   - title: Policies
