Changing Ben and Owen's OH

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -236,11 +236,11 @@ owen:
         time-end: "18:00"
         day: Tuesday
         location: ECEB 5034  
-      OH2:
-        time-start: "14:00"
-        time-end: "15:00"
-        day: Thursday
-        location: Zoom  
+    #   OH2:
+    #     time-start: "14:00"
+    #     time-end: "15:00"
+    #     day: Thursday
+    #     location: Zoom  
 
 tuedo:
     display_name: "Tue Ngoc Do"
@@ -270,7 +270,7 @@ ben:
         time-start: "12:00"
         time-end: "13:00"
         day: Wednesday
-        location: ECEB 4036
+        location: Zoom
 
 vishesh:
     display_name: "Vishesh Prasad"
