--- a/_data/quiz.yml
+++ b/_data/quiz.yml
@@ -135,7 +135,7 @@ quiz19:
   num: 19
   topic: Decidability 
   date: 2025-11-21
-  questions-link: 
-  solutions-link:  
+  questions-link: materials/quizzes/Q19.pdf
+  solutions-link: materials/quizzes/Q19-sol.pdf     
 
 
